--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'de.greenrobot:eventbus:2.4.0'
+    compile 'com.google.code.gson:gson:1.7.2'
+    compile 'de.greenrobot:eventbus:2.4.0'
 }
